removed map for mobile devices & fixed gap between imgs in speakers section

--- a/css/slides/contact.css
+++ b/css/slides/contact.css
@@ -9,3 +9,9 @@
 #map {
 	height: 300px;
 }
+
+@media (min-width: 40.0rem) {
+	#map {
+		display: none;
+	}
+}
